welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:16: error: value gauche is not a member of Unit
possible cause: maybe a semicolon is missing before `value gauche'?
}   gauche();avance(7);droite()
    ^